--- a/style.less
+++ b/style.less
@@ -1,3 +1,7 @@
 .markdown-body table {
-  font-size: 12px !important;
+  font-size: 8px !important;
+}
+
+.markdown-body {
+  font-size: 8px !important;
 }
